fixing bg banner

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   top: 0;
   overflow: hidden;
   text-align: center;
-  width: stretch;
+  width: 100%;
 }
 .banner .banner-content {
   display: flex;
@@ -176,15 +176,19 @@
   }
 }
 @media screen and (max-width: 480px) {
+  .banner-titulo {
+    width: 90vw !important;
+  }
   .about-me {
     flex-direction: column;
+    justify-content: center !important;
   }
   .about-me .img img {
     width: 50vw;
     margin-bottom: 20px;
   }
   .about-me .about-me_texto div {
-    width: 100vw !important;
+    width: 90vw !important;
   }
 }
 .main-header {
@@ -624,7 +628,7 @@
 }
 @media screen and (max-width: 620px) {
   .soft-skills .ssContainer {
-    padding: 20% 10% 10%;
+    padding: 30% 10% 10%;
   }
 }
 .soft-skills .ssContainer .softskills {
