--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
   --secondary:#040404;
   --tertiary:#2f2f2f;
   --quaternary:#fff;
+  --yellow:#e1dc4f;
 }
 html, body { 
   scroll-behavior: smooth
