--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -6,16 +6,18 @@
   height: 100vh;
   z-index: 5;
   .max-width .newOld{
+
     display: flex;
     position: absolute;
-    bottom: 15%;
+    top: 15%;
     width: 100vw;
     justify-content: space-between;
     padding: 0 10%;
     z-index: 999;
+    
     span{
       font-size: x-large;
-      color: var(--main);
+      color: var(--yellow);
     }
   }
   &:before {
@@ -57,6 +59,7 @@
   }
    
   .carousel {
+    position: relative;
     top: -60px;
     padding: 0% 5%;
     height: 100vh;
@@ -129,11 +132,16 @@
   border-radius: 50%;
   margin-top: 0 5px;
   border: 1px solid var(--main) !important;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
+  &:hover{
+    transform: scale(1.1);
+    background-color: var(--main)!important;
+  }
 }
 .owl-dot.active {
   width: 35px;
   border-radius: 19px;
+  background-color: var(--main)!important;
 }
 .owl-stage{
   transition: all 1s ease 0s !important;
