--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -67,7 +67,7 @@
   .banner-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     z-index: 2;
     max-height: 1440px;
@@ -262,5 +262,56 @@
     .about-me_texto div {
       width: 90vw !important;
     }
+  }
+}
+
+// animación mouse-scroll:
+
+
+.scroll-arrow,
+.scroll-arrow:before{
+  position: absolute;
+  left: 50%;
+}
+.scroll-arrow{
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  margin: -20px 0 0 -20px;
+  -webkit-transform: rotate(45deg);
+  border-left: none;
+  border-top: none;
+  border-right: 2px #fff solid;
+  border-bottom: 2px #fff solid;
+  cursor: pointer;
+  transition: all .5s ease-out;
+  a{
+    position: absolute;
+    width: 110%;
+    height: 110%;
+    left: 0px;
+  }
+}  
+.scroll-arrow:before{
+  content: '';
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  margin: -10px 0 0 -10px;
+  border-left: none;
+  border-top: none;
+  border-right: 1px #fff solid;
+  border-bottom: 1px #fff solid;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: arrow;
+}  
+@keyframes arrow{
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: translate(-10px, -10px);
   }
 }
