--- a/css/main.css
+++ b/css/main.css
@@ -485,6 +485,11 @@
   cursor: pointer;
   transition: 0.5s;
 }
+@media (width <= 800px) {
+  .portfolio .carousel .card:hover {
+    transition: none;
+  }
+}
 .portfolio .carousel .card a {
   text-decoration: none;
   color: #5b5e62;
@@ -611,6 +616,7 @@
   font-weight: bold;
   text-shadow: solid 1px 1px 0px #006e61;
   text-transform: uppercase;
+  cursor: default;
 }
 
 .contenedor-modal-preview {
@@ -653,15 +659,18 @@
 
 .modal-preview-enlaces a {
   padding: 14px 28px;
+  border: 1px solid;
   border-radius: 12px;
   background: var(--secondary);
   text-decoration: none;
   font-weight: 600;
   color: var(--main);
+  box-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
 }
 .modal-preview-enlaces a:hover {
   background: var(--main);
   color: var(--secondary);
+  border: 1px solid var(--main);
 }
 
 /* Add Animation */
@@ -685,6 +694,16 @@
     opacity: 1;
   }
 }
+@keyframes contraer {
+  from {
+    top: 0px;
+    opacity: 1;
+  }
+  to {
+    top: -300;
+    opacity: 0;
+  }
+}
 @keyframes scroll-down {
   0% {
     transform: translatey(0px);
@@ -703,7 +722,7 @@
 }
 .cerrar {
   position: absolute;
-  color: var(--secondary);
+  color: var(--main);
   text-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
   right: 19%;
   top: 19%;
@@ -713,7 +732,7 @@
 
 .cerrar:hover,
 .cerrar:focus {
-  color: var(--main);
+  color: var(--secondary);
   text-decoration: none;
   cursor: pointer;
 }
