--- a/css/main.css
+++ b/css/main.css
@@ -413,11 +413,10 @@
   width: 100vw;
   justify-content: space-between;
   padding: 0 10%;
-  z-index: 999;
 }
 .portfolio .max-width .newOld span {
   font-size: x-large;
-  color: gray;
+  color: rgb(187, 185, 185);
 }
 .portfolio:before {
   content: "";
@@ -464,6 +463,9 @@
   flex-direction: column;
   justify-content: center;
 }
+.portfolio .carousel .owl-stage-outer {
+  height: 465px;
+}
 .portfolio .carousel .card {
   background: rgba(0, 0, 0, 0.2);
   border-radius: 6px;
@@ -474,16 +476,6 @@
 }
 .portfolio .carousel .card:hover {
   background: rgba(0, 0, 0, 0);
-}
-.portfolio .carousel .card:hover .box {
-  transform: scale(0.95);
-}
-.portfolio .carousel .card:hover .box a p {
-  color: var(--main);
-}
-.portfolio .carousel .card:hover .box img {
-  cursor: pointer;
-  transition: 0.5s;
 }
 @media (width <= 800px) {
   .portfolio .carousel .card:hover {
@@ -500,6 +492,16 @@
   align-items: center;
   justify-content: center;
   transition: 0.8s;
+}
+.portfolio .carousel .card .box:hover {
+  transform: scale(0.95);
+}
+.portfolio .carousel .card .box:hover a p {
+  color: var(--main);
+}
+.portfolio .carousel .card .box:hover img {
+  cursor: pointer;
+  transition: 0.5s;
 }
 .portfolio .carousel .card .box .text {
   font-size: 25px;
@@ -518,10 +520,25 @@
 .portfolio .carousel .card .box p {
   color: gray;
 }
+.portfolio .carousel .card .year {
+  position: absolute;
+  color: gray;
+  top: 402px;
+  left: -8px;
+  height: 20px;
+  cursor: grab;
+  z-index: 999;
+  width: 105%;
+  background-color: rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+  font-style: italic;
+}
+.portfolio .carousel .card .year:active {
+  cursor: grabbing;
+}
 
 .owl-dots {
   text-align: center;
-  margin-top: 75px;
 }
 
 .owl-dot {
@@ -585,6 +602,14 @@
   animation-name: animarsuperior;
   animation-duration: 0.5s;
 }
+@media screen and (max-width: 480px) {
+  .contenido-modal {
+    flex-direction: column;
+    height: 79%;
+    width: 84%;
+    border-radius: 12px;
+  }
+}
 
 .contenedor-modal-descripcion {
   width: 50%;
@@ -594,6 +619,11 @@
   align-items: flex-start;
   justify-content: space-around;
   padding: 20px 7%;
+}
+@media screen and (max-width: 480px) {
+  .contenedor-modal-descripcion {
+    width: auto;
+  }
 }
 
 .modal-descripcion-titulo {
@@ -628,6 +658,13 @@
   overflow: hidden;
   justify-content: center;
 }
+@media screen and (max-width: 480px) {
+  .contenedor-modal-preview {
+    position: inherit;
+    width: auto;
+    left: auto;
+  }
+}
 
 .modal-image {
   max-width: 100%;
@@ -656,6 +693,11 @@
   bottom: 14%;
   right: 13%;
 }
+@media screen and (max-width: 480px) {
+  .modal-preview-enlaces {
+    right: inherit;
+  }
+}
 
 .modal-preview-enlaces a {
   padding: 14px 28px;
@@ -665,6 +707,7 @@
   text-decoration: none;
   font-weight: 600;
   color: var(--main);
+  margin-left: 10px;
   box-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
 }
 .modal-preview-enlaces a:hover {
@@ -1216,6 +1259,8 @@ footer .credits a span {
   width: 100%;
   position: fixed;
   z-index: 100;
+  opacity: 1;
+  transition: all 3s ease;
 }
 
 :root {
