--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -14,11 +14,10 @@
     width: 100vw;
     justify-content: space-between;
     padding: 0 10%;
-    z-index: 999;
     
     span{
       font-size: x-large;
-      color: gray;
+      color: rgb(187, 185, 185);
     }
   }
   &:before {
@@ -67,31 +66,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    .owl-stage-outer{
+      height: 465px;
+    }
     
     .card {
       background: rgba(0, 0, 0, 0.2);
       border-radius: 6px;
       padding: 15px 40px;
-    margin: auto;
-    width: max-content;
-    //text-align: center;
+      margin: auto;
+      width: max-content;
+      //text-align: center;
       transition: all .8s ease;
-
-      &:hover {
+      
+      &:hover{
         background: rgba(0, 0, 0, 0);
         
-        .box {
-          transform: scale(0.95);
-          a p{
-            color: var(--main);
-          }
-          img {
-            // box-shadow: 0 0 10px var(--main);
-            cursor: pointer;
-            // border: solid 1px var(--main);
-            transition: .5s;
-          }
-        }
+        
         @media (width <= 800px) {
           transition:none;
         }
@@ -107,6 +98,18 @@
         align-items: center;
         justify-content: center;
         transition: .8s;
+        &:hover{
+          transform: scale(0.95);
+          a p{
+            color: var(--main);
+          }
+          img {
+            // box-shadow: 0 0 10px var(--main);
+            cursor: pointer;
+            // border: solid 1px var(--main);
+            transition: .5s;
+          }
+        }
         .text {
           font-size: 25px;
           font-weight: 500;
@@ -128,12 +131,28 @@
           color: gray;
         }
       }
+      .year{
+        position: absolute;
+        color: gray;
+        top: 402px;
+        left: -8px;
+        height: 20px;
+        cursor: grab;
+        z-index: 999;
+        width: 105%;
+        background-color: rgba(0, 0, 0, 0.2);
+        text-transform: uppercase;
+        font-style: italic;
+        &:active{
+          cursor: grabbing;
+        }
+        
+      }
     }
   }
 }
 .owl-dots {
   text-align: center;
-  margin-top: 75px;
 }
 .owl-dot {
   height: 18px;
@@ -156,6 +175,7 @@
 .owl-stage{
     animation: none!important;
 }
+
 
 .modal {
   display: none;
@@ -193,7 +213,13 @@
   -webkit-animation-name: animarsuperior;
   -webkit-animation-duration: 0.5s;
   animation-name: animarsuperior;
-  animation-duration: 0.5s
+  animation-duration: 0.5s;
+  @media screen and (max-width: 480px) {
+    flex-direction: column;
+    height: 79%;
+    width: 84%;
+    border-radius: 12px;
+  }
 }
 
 .contenedor-modal-descripcion {
@@ -205,6 +231,9 @@
   align-items: flex-start;
   justify-content: space-around;
   padding: 20px 7%;
+  @media screen and (max-width: 480px) {
+    width: auto;
+  }
 }
 
 .modal-descripcion-titulo {
@@ -238,7 +267,11 @@
   display: flex;
   overflow: hidden;
   justify-content: center;
-
+  @media screen and (max-width: 480px) {
+    position: inherit;
+    width: auto; 
+    left: auto; 
+  }
 }
 
 .modal-image {
@@ -268,6 +301,9 @@
   position: absolute;
   bottom: 14%;
   right: 13%;
+  @media screen and (max-width: 480px) {
+    right: inherit;
+  }
 }
 
 .modal-preview-enlaces a {
@@ -278,6 +314,7 @@
   text-decoration: none;
   font-weight: 600;
   color: var(--main);
+  margin-left: 10px;
   box-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
   &:hover{
     background: var(--main);
