--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,17 @@
   text-align: center;
   width: 100%;
 }
+@media screen and (max-width: 886px) {
+  .banner .banner-video {
+    height: 200vh;
+    background: #232526; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #414345, #232526); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+  .banner .banner-video video {
+    display: none;
+  }
+}
 .banner .banner-content {
   display: flex;
   flex-direction: column;
