--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -10,7 +10,7 @@
   width: 100vw;
   height: 100vh;
   // padding: 5% 0;
-  margin-bottom: 25%;
+  // margin-bottom: 25%;
   justify-content: space-evenly;
   div img {
     // left: 50%;
