fix menu nav disappear

--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,9 @@
     opacity: 1;
     transition: opacity 1s ease-in-out;
   }
+  .main-header .menu-btn:checked ~ .nav-links .nav-link a {
+    color: #fff !important;
+  }
   .skillset:before {
     background-position-x: 50% !important;
   }
@@ -420,7 +423,9 @@
   .row100 {
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)) !important;
   }
-  .inputBox input, .text, input[type=submit] {
+  .inputBox input,
+  .text,
+  input[type=submit] {
     font-size: 15px !important;
   }
 }
@@ -431,19 +436,6 @@
   text-align: center;
   height: 100vh;
   z-index: 5;
-}
-.portfolio .max-width .newOld {
-  display: flex;
-  position: relative;
-  cursor: default;
-  bottom: 220px;
-  width: 100vw;
-  justify-content: space-between;
-  padding: 0 10%;
-}
-.portfolio .max-width .newOld span {
-  font-size: x-large;
-  color: rgb(187, 185, 185);
 }
 .portfolio:before {
   content: "";
@@ -599,7 +591,7 @@
   /* Posición fija */
   z-index: 9999;
   /* Se situará por encima de otros elementos de la página*/
-  padding-top: 100px;
+  padding-top: 140px;
   /* El contenido estará situado a 200px de la parte superior */
   left: 0;
   top: 0;
@@ -632,7 +624,7 @@
 @media screen and (max-width: 480px) {
   .contenido-modal {
     flex-direction: column;
-    height: 79%;
+    height: 95%;
     width: 84%;
     border-radius: 12px;
   }
@@ -650,6 +642,7 @@
 @media screen and (max-width: 480px) {
   .contenedor-modal-descripcion {
     width: auto;
+    height: 67%;
   }
 }
 
@@ -791,13 +784,19 @@
   }
 }
 .cerrar {
-  position: absolute;
+  position: relative;
   color: var(--main);
   text-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
-  right: 19%;
-  top: 19%;
+  bottom: 77%;
+  left: 31%;
   font-size: 30px;
   font-weight: bold;
+}
+@media screen and (max-width: 760px) {
+  .cerrar {
+    left: 35% !important;
+    bottom: 94% !important;
+  }
 }
 
 .cerrar:hover,
@@ -1009,6 +1008,8 @@
   min-height: 100vh;
   background: var(--secondary);
   overflow: hidden;
+  position: relative;
+  z-index: 5;
 }
 .contact h3 {
   color: var(--main);
@@ -1253,11 +1254,19 @@
 
 @media screen and (max-width: 760px) {
   .social {
-    bottom: 1.5vh;
+    bottom: -58vh;
+    right: -235px;
+    transform: rotate(90deg) !important;
+    transition: 2s ease-out;
+  }
+  .social i {
+    transform: rotate(270deg);
   }
 }
 footer {
   background-color: var(--tertiary);
+  position: relative;
+  z-index: 5;
 }
 footer .credits {
   align-items: center;
