--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -64,9 +64,7 @@
     width: 100%; 
     @media screen and (max-width: 886px) {
       height: 200vh;
-      background: #232526;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: radial-gradient(circle at top,#fff, #011412, #232526);
       video{
         display: none;
       }
