--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@
 }
 @media screen and (max-width: 886px) {
   .banner .banner-video {
-    height: 200vh;
-    background: radial-gradient(circle at top, #fff, #011412, #232526);
+    height: 177%;
+    background: radial-gradient(circle at top, #8bc7c0, #030005, #4C4A46);
   }
   .banner .banner-video video {
     display: none;
@@ -34,6 +34,11 @@
   margin: 25vh 5% 0vh 5%;
   position: relative;
   background: linear-gradient(transparent, transparent, transparent, var(--secondary));
+}
+@media screen and (max-width: 886px) {
+  .banner .banner-content {
+    background: none;
+  }
 }
 .banner .banner-content .banner-titulo {
   max-width: 100vw;
@@ -449,12 +454,14 @@
 .portfolio .owl-nav.disabled {
   display: inline;
 }
-.portfolio .owl-prev, .portfolio .owl-next {
+.portfolio .owl-prev,
+.portfolio .owl-next {
   position: absolute;
   top: 40vh;
-  font-size: 4rem !important;
   z-index: 999;
-  color: var(--main) !important;
+  font-size: 10rem !important;
+  z-index: 999;
+  color: transparent !important;
   font-family: "Montserrat", sans-serif !important;
   transition: all 0.5s;
 }
@@ -464,11 +471,13 @@
 .portfolio .owl-next {
   right: 1.5%;
 }
-.portfolio .owl-prev span, .portfolio .owl-next span {
+.portfolio .owl-prev span,
+.portfolio .owl-next span {
   font-family: inherit;
   font-weight: lighter;
 }
-.portfolio button.owl-prev:hover, .portfolio button.owl-next:hover {
+.portfolio button.owl-prev:hover,
+.portfolio button.owl-next:hover {
   transform: scale(1.2);
 }
 .portfolio .carousel {
@@ -520,6 +529,11 @@
   cursor: pointer;
   transition: 0.5s;
 }
+@media (width <= 800px) {
+  .portfolio .carousel .card .box {
+    transition: none;
+  }
+}
 .portfolio .carousel .card .box .text {
   font-size: 25px;
   font-weight: 500;
@@ -545,7 +559,7 @@
   height: 20px;
   cursor: grab;
   z-index: 999;
-  width: 105%;
+  width: 106%;
   background-color: rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   font-style: italic;
@@ -571,6 +585,11 @@
   transform: scale(1.1);
   background-color: var(--main) !important;
 }
+@media (width <= 800px) {
+  .owl-dot {
+    transition: none;
+  }
+}
 
 .owl-dot.active {
   width: 35px;
@@ -580,6 +599,29 @@
 
 .owl-stage {
   animation: none !important;
+}
+
+.pf {
+  top: 47%;
+  left: 96%;
+  -webkit-transform: rotate(316deg);
+  border-right: 2px var(--main) solid;
+  border-bottom: 2px var(--main) solid;
+  cursor: default;
+  transition: all 0.5s ease-out;
+}
+@media (width <= 800px) {
+  .pf {
+    top: 50%;
+    left: 92%;
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.prev {
+  left: 10%;
+  -webkit-transform: rotate(134deg);
 }
 
 .modal {
@@ -986,6 +1028,14 @@
   font-weight: 300;
   text-transform: uppercase;
 }
+@media screen and (max-width: 886px) {
+  .soft-skills .ssContainer .softskills h4 {
+    font-size: 2rem !important;
+    font-style: unset;
+    font-weight: 300;
+    text-transform: none;
+  }
+}
 .soft-skills .ssContainer .fas {
   display: none;
   position: relative;
@@ -1294,7 +1344,7 @@ footer .credits a span {
   position: fixed;
   z-index: 100;
   opacity: 1;
-  transition: all 3s ease;
+  transition: all 2s ease;
 }
 
 :root {
