--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -61,16 +61,19 @@
     top: 0;
     overflow: hidden;
     text-align: center;
-    width: 100%; 
+    width: 100%;
+
     @media screen and (max-width: 886px) {
-      height: 200vh;
-      background: radial-gradient(circle at top,#fff, #011412, #232526);
-      video{
+      height: 177%;
+      background: radial-gradient(circle at top, #8bc7c0, #030005, #4C4A46);
+
+      video {
         display: none;
       }
     }
-    
+
   }
+
   .banner-content {
     display: flex;
     flex-direction: column;
@@ -80,12 +83,18 @@
     max-height: 1440px;
     margin: 25vh 5% 0vh 5%;
     position: relative;
-    background: linear-gradient(transparent,transparent,transparent,var(--secondary));
+    background: linear-gradient(transparent, transparent, transparent, var(--secondary));
+
+    @media screen and (max-width: 886px) {
+      background: none;
+    }
 
     .banner-titulo {
       max-width: 100vw;
+
       div {
         position: relative;
+
         h1 {
           letter-spacing: 5px;
           font-size: calc(2rem + 3vw);
@@ -105,16 +114,19 @@
             height: 100%;
             width: 50%;
           }
+
           &::before {
             left: 0;
             border-bottom: 6px solid var(--tertiary);
           }
+
           &::after {
             right: 0;
             border-top: 6px solid var(--tertiary);
           }
         }
       }
+
       .wordChanger {
         display: flex;
         margin-top: 20px;
@@ -126,6 +138,7 @@
         justify-content: center;
         line-height: 40px;
         overflow: hidden;
+
         ul,
         p {
           margin: 0;
@@ -133,36 +146,43 @@
           font-size: calc(0.5em + 2vw);
           text-transform: uppercase;
           text-decoration: none;
-          @media (max-width: 768px) { 
+
+          @media (max-width: 768px) {
             font-size: calc(0.5em + 1.5vw);
           }
-          span i{
+
+          span i {
             color: var(--main);
             transform: rotate(180deg);
             animation: cambiar 15s infinite;
-            
+
           }
-          .second{
+
+          .second {
             animation: cambiar 15s infinite;
             animation-delay: 0.2s;
           }
-          .third{
+
+          .third {
             animation: cambiar 15s infinite;
             animation-delay: 0.5s;
           }
         }
+
         ul {
           list-style: none;
           animation: cambiar 15s infinite;
           animation-delay: 0.7s;
           text-align: center;
           color: var(--tertiary);
-          @media (max-width: 768px) { 
+
+          @media (max-width: 768px) {
             color: white;
           }
         }
       }
     }
+
     // .fa-chevron-down{
     //   position: absolute;
     //   font-size: 2rem;
@@ -176,10 +196,11 @@
     //     bottom: 28vh;
     //   }
     // }
-    
-    
+
+
   }
 }
+
 .content {
   margin: auto;
   text-align: center;
@@ -188,10 +209,11 @@
 }
 
 @keyframes latir {
-  0%{
+  0% {
     transform: scale(1);
   }
-  100%{
+
+  100% {
     transform: scale(1.2);
   }
 }
@@ -202,16 +224,20 @@
     margin-top: 0px;
     opacity: 0;
   }
+
   8% {
     margin-top: 0px;
   }
+
   16% {
     margin-top: 0px;
     opacity: 1;
   }
+
   25% {
     margin-top: 0px;
   }
+
   32% {
     margin-top: 0px;
     opacity: 0;
@@ -221,16 +247,20 @@
     margin-top: -40px;
     opacity: 0;
   }
+
   41% {
     margin-top: -40px;
   }
+
   49% {
     margin-top: -40px;
     opacity: 1;
   }
+
   57% {
     margin-top: -40px;
   }
+
   65% {
     margin-top: -40px;
     opacity: 0;
@@ -240,16 +270,20 @@
     margin-top: -80px;
     opacity: 0;
   }
+
   74% {
     margin-top: -80px;
   }
+
   82% {
     margin-top: -80px;
     opacity: 1;
   }
+
   90% {
     margin-top: -80px;
   }
+
   99% {
     margin-top: -80px;
     opacity: 0;
@@ -262,16 +296,19 @@
 }
 
 @media screen and (max-width: 480px) {
-  .banner-titulo{
+  .banner-titulo {
     width: 90vw !important;
   }
+
   .about-me {
     flex-direction: column;
-    justify-content: center!important;
+    justify-content: center !important;
+
     .img img {
       width: 50vw;
       margin-bottom: 20px;
     }
+
     .about-me_texto div {
       width: 90vw !important;
     }
@@ -282,11 +319,12 @@
 
 
 .scroll-arrow,
-.scroll-arrow:before{
+.scroll-arrow:before {
   position: absolute;
   left: 50%;
 }
-.scroll-arrow{
+
+.scroll-arrow {
   width: 40px;
   height: 40px;
   top: 50%;
@@ -298,14 +336,16 @@
   border-bottom: 2px #fff solid;
   cursor: pointer;
   transition: all .5s ease-out;
-  a{
+
+  a {
     position: absolute;
     width: 110%;
     height: 110%;
     left: 0px;
   }
-}  
-.scroll-arrow:before{
+}
+
+.scroll-arrow:before {
   content: '';
   width: 20px;
   height: 20px;
@@ -318,12 +358,14 @@
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-name: arrow;
-}  
-@keyframes arrow{
-  0%{
+}
+
+@keyframes arrow {
+  0% {
     opacity: 1;
   }
-  100%{
+
+  100% {
     opacity: 0;
     transform: translate(-10px, -10px);
   }
